syntax = "proto3";

option java_multiple_files = true;
option java_package = "grpc";
option java_outer_classname = "GreeterServices";
option java_generic_services = true;

package helloGreeter;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}